misc: rp1: RaspberryPi RP1 misc driver (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -66,6 +66,7 @@
         patches.suse/dt-bindings-clock-Add-RaspberryPi-RP1-clock-bindings.patch
         patches.suse/clk-rp1-Add-support-for-clocks-provided-by-RP1.patch
         patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-gpio-support.patch
+        patches.suse/misc-rp1-RaspberryPi-RP1-misc-driver.patch
 
 	########################################################
 	# end of sorted patches
