dt-bindings: clock: Add RaspberryPi RP1 clock bindings (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -63,6 +63,7 @@
         patches.suse/arm64-dts-bcm2712-Add-external-clock-for-RP1-chipset-on-Rpi5.patch
         patches.suse/arm64-dts-broadcom-Add-board-DTS-for-Rpi5-which-includes-RP1-node.patch
         patches.suse/arm64-dts-broadcom-Add-overlay-for-RP1-device.patch
+        patches.suse/dt-bindings-clock-Add-RaspberryPi-RP1-clock-bindings.patch
 
 	########################################################
 	# end of sorted patches
