clk: rp1: Implement remaining clock tree (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -70,6 +70,7 @@
         patches.suse/MAINTAINERS-add-Raspberry-Pi-RP1-section.patch
         patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-pinmux-pinconf-support.patch
         patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
+        patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
 
 	########################################################
 	# end of sorted patches
