--- a/series.conf
+++ b/series.conf
@@ -60,6 +60,7 @@
         patches.suse/dt-bindings-pinctrl-Add-RaspberryPi-RP1-gpio-pinctrl-pinmux-bindings.patch
         patches.suse/dt-bindings-misc-Add-device-specific-bindings-for-RaspberryPi-RP1.patch
         patches.suse/arm64-dts-rp1-Add-support-for-RaspberryPi-s-RP1-device.patch
+        patches.suse/arm64-dts-bcm2712-Add-external-clock-for-RP1-chipset-on-Rpi5.patch
 
 	########################################################
 	# end of sorted patches
