pinctrl: rp1: Implement RaspberryPi RP1 pinmux/pinconf support (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -68,6 +68,7 @@
         patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-gpio-support.patch
         patches.suse/misc-rp1-RaspberryPi-RP1-misc-driver.patch
         patches.suse/MAINTAINERS-add-Raspberry-Pi-RP1-section.patch
+        patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-pinmux-pinconf-support.patch
 
 	########################################################
 	# end of sorted patches
