dt-bindings: misc: Add device specific bindings for RaspberryPi RP1 (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -58,6 +58,7 @@
 
         # https://github.com/broadcom/stblinux.git next
         patches.suse/dt-bindings-pinctrl-Add-RaspberryPi-RP1-gpio-pinctrl-pinmux-bindings.patch
+        patches.suse/dt-bindings-misc-Add-device-specific-bindings-for-RaspberryPi-RP1.patch
 
 	########################################################
 	# end of sorted patches
