--- a/series.conf
+++ b/series.conf
@@ -65,6 +65,7 @@
         patches.suse/arm64-dts-broadcom-Add-overlay-for-RP1-device.patch
         patches.suse/dt-bindings-clock-Add-RaspberryPi-RP1-clock-bindings.patch
         patches.suse/clk-rp1-Add-support-for-clocks-provided-by-RP1.patch
+        patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-gpio-support.patch
 
 	########################################################
 	# end of sorted patches
