dt-bindings: clock: rp1: Add missing MIPI DSI defines (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -69,6 +69,7 @@
         patches.suse/misc-rp1-RaspberryPi-RP1-misc-driver.patch
         patches.suse/MAINTAINERS-add-Raspberry-Pi-RP1-section.patch
         patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-pinmux-pinconf-support.patch
+        patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
 
 	########################################################
 	# end of sorted patches
