--- a/series.conf
+++ b/series.conf
@@ -62,6 +62,7 @@
         patches.suse/arm64-dts-rp1-Add-support-for-RaspberryPi-s-RP1-device.patch
         patches.suse/arm64-dts-bcm2712-Add-external-clock-for-RP1-chipset-on-Rpi5.patch
         patches.suse/arm64-dts-broadcom-Add-board-DTS-for-Rpi5-which-includes-RP1-node.patch
+        patches.suse/arm64-dts-broadcom-Add-overlay-for-RP1-device.patch
 
 	########################################################
 	# end of sorted patches
