dt-bindings: pinctrl: Add RaspberryPi RP1 gpio/pinctrl/pinmux bindings (jsc#PED-7144).

--- a/series.conf
+++ b/series.conf
@@ -56,6 +56,9 @@
 	# sorted patches
 	########################################################
 
+        # https://github.com/broadcom/stblinux.git next
+        patches.suse/dt-bindings-pinctrl-Add-RaspberryPi-RP1-gpio-pinctrl-pinmux-bindings.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
