--- a/series.conf
+++ b/series.conf
@@ -59,6 +59,7 @@
         # https://github.com/broadcom/stblinux.git next
         patches.suse/dt-bindings-pinctrl-Add-RaspberryPi-RP1-gpio-pinctrl-pinmux-bindings.patch
         patches.suse/dt-bindings-misc-Add-device-specific-bindings-for-RaspberryPi-RP1.patch
+        patches.suse/arm64-dts-rp1-Add-support-for-RaspberryPi-s-RP1-device.patch
 
 	########################################################
 	# end of sorted patches
