--- a/series.conf
+++ b/series.conf
@@ -10306,6 +10306,7 @@
 	patches.suse/xfs-change-xfs_xattr_class-from-a-TRACE_EVENT-to-DECLARE_EVENT_CLASS.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_log_cil_return.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_discard_rtrelax.patch
+	patches.suse/xfs-remove-unused-trace-event-xfs_reflink_cow_enospc.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 
