iommu/tegra241-cmdqv: Read SMMU IDR1.CMDQS instead of hardcoding (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -4684,6 +4684,7 @@
 	patches.suse/iommu-arm-smmu-Make-instance-lookup-robust
 	patches.suse/iommu-arm-smmu-v3-Clean-up-more-on-probe-failure
 	patches.suse/iommu-Manage-driver-probe-deferral-better
+	patches.suse/iommu-tegra241-cmdqv-Read-SMMU-IDR1.CMDQS-instead-of.patch
 	patches.suse/iommu-vt-d-Avoid-use-of-NULL-after-WARN_ON_ONCE
 	patches.suse/iommu-amd-Misc-ACPI-IVRS-debug-info-clean-up
 	patches.suse/iommu-amd-Disable-AMD-IOMMU-if-CMPXCHG16B-feature-is-not-support
