iommu/tegra241-cmdqv: Read SMMU IDR1.CMDQS instead of hardcoding (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50836,6 +50836,7 @@
 	patches.suse/platform-x86-acer-wmi-Ignore-AC-events.patch
 	patches.suse/iommu-arm-smmu-Make-instance-lookup-robust
 	patches.suse/iommu-arm-smmu-v3-Clean-up-more-on-probe-failure.patch
+	patches.suse/iommu-tegra241-cmdqv-Read-SMMU-IDR1.CMDQS-instead-of.patch
 	patches.suse/iommu-vt-d-Avoid-use-of-NULL-after-WARN_ON_ONCE
 	patches.suse/pinctrl-samsung-fix-fwnode-refcount-cleanup-if-platf.patch
 	patches.suse/pinctrl-amd-Take-suspend-type-into-consideration-whi.patch
