selftests/bpf: Support dynamically linking LLVM if static is not available
Fix the following BPF selftests build error:

[  116s] make[1]: Entering directory '/home/abuild/rpmbuild/BUILD/kselftests-bpf-6.12.0-build/tools/testing/selftests/bpf'
[  116s] llvm-config: error: missing: /usr/lib64/libLLVMDemangle.a
[  116s] llvm-config: error: missing: /usr/lib64/libLLVMSupport.a
[  116s] llvm-config: error: missing: /usr/lib64/libLLVMTargetParser.a
[  116s] llvm-config: error: missing: /usr/lib64/libLLVMBinaryFormat.a
(...)

--- a/series.conf
+++ b/series.conf
@@ -7675,6 +7675,7 @@
 	patches.suse/mailbox-pcc-Always-clear-the-platform-ack-interrupt-.patch
 	patches.suse/mailbox-pcc-Use-acpi_os_ioremap-instead-of-ioremap.patch
 	patches.suse/selftests-bpf-Fix-freplace_link-segfault-in-tailcall.patch
+	patches.suse/selftests-bpf-Support-dynamically-linking-LLVM-if-st.patch
 	patches.suse/selftests-bpf-Define-SYS_PREFIX-for-powerpc.patch
 	patches.suse/selftests-bpf-Select-NUMA_NO_NODE-to-create-map.patch
 	patches.suse/bpf-Add-tracepoints-with-null-able-arguments.patch
