x86/bugs: Avoid warning when overriding return thunk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10333,6 +10333,7 @@
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
+	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
