x86/bugs: Use switch/case in its_apply_mitigation() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10334,6 +10334,7 @@
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
+	patches.suse/x86-bugs-Use-switch-case-in-its_apply_mitigation.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
