--- a/series.conf
+++ b/series.conf
@@ -10335,6 +10335,7 @@
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
 	patches.suse/x86-bugs-Use-switch-case-in-its_apply_mitigation.patch
+	patches.suse/x86-bugs-Introduce-cdt_possible.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
