x86/bugs: Remove its=stuff dependency on retbleed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10336,6 +10336,7 @@
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
 	patches.suse/x86-bugs-Use-switch-case-in-its_apply_mitigation.patch
 	patches.suse/x86-bugs-Introduce-cdt_possible.patch
+	patches.suse/x86-bugs-Remove-its-stuff-dependency-on-retbleed.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
