x86/bugs: Allow ITS stuffing in eIBRS+retpoline mode also (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10337,6 +10337,7 @@
 	patches.suse/x86-bugs-Use-switch-case-in-its_apply_mitigation.patch
 	patches.suse/x86-bugs-Introduce-cdt_possible.patch
 	patches.suse/x86-bugs-Remove-its-stuff-dependency-on-retbleed.patch
+	patches.suse/x86-bugs-Allow-ITS-stuffing-in-eIBRS-retpoline-mode-also.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
