--- a/series.conf
+++ b/series.conf
@@ -10338,6 +10338,7 @@
 	patches.suse/x86-bugs-Introduce-cdt_possible.patch
 	patches.suse/x86-bugs-Remove-its-stuff-dependency-on-retbleed.patch
 	patches.suse/x86-bugs-Allow-ITS-stuffing-in-eIBRS-retpoline-mode-also.patch
+	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
