s390/mm: Remove possible false-positive warning in pte_free_defer() (git-fixes bsc#1247366).

--- a/series.conf
+++ b/series.conf
@@ -10344,6 +10344,7 @@
 	patches.suse/x86-bugs-Remove-its-stuff-dependency-on-retbleed.patch
 	patches.suse/x86-bugs-Allow-ITS-stuffing-in-eIBRS-retpoline-mode-also.patch
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
+	patches.suse/s390-mm-Remove-possible-false-positive-warning-in-pte_free.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
