apple-mfi-fastcharge: protect first device name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33825,6 +33825,7 @@
 	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
 	patches.kabi/bluetooth-restore-le_scan_restart-in-struct-hci_dev.patch
 	patches.kabi/hci_dev-centralize-extra-lock.patch
+	patches.kabi/apple-mfi-fastcharge-protect-first-device-name.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
