staging: nvec: Fix incorrect null termination of battery manufacturer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33199,6 +33199,7 @@
 	patches.suse/iio-adc-ad_sigma_delta-change-to-buffer-predisable.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra-505bffe.patch
+	patches.suse/staging-nvec-Fix-incorrect-null-termination-of-batte.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
