bus: mhi: host: Detect events pointing to unexpected TREs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33194,6 +33194,7 @@
 	patches.suse/samples-mei-Fix-building-on-musl-libc.patch
 	patches.suse/vmci-Prevent-the-dispatching-of-uninitialized-payloa.patch
 	patches.suse/misc-rtsx-usb-Ensure-mmc-child-device-is-active-when.patch
+	patches.suse/bus-mhi-host-Detect-events-pointing-to-unexpected-TR.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
