ACPI: LPSS: Remove AudioDSP related ID (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33185,6 +33185,7 @@
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
+	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
