--- a/series.conf
+++ b/series.conf
@@ -33184,6 +33184,7 @@
 	patches.suse/hfsplus-remove-mutex_lock-check-in-hfsplus_free_extents.patch
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
+	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
