--- a/series.conf
+++ b/series.conf
@@ -33213,6 +33213,7 @@
 	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
 	patches.suse/usb-atm-cxacru-Merge-cxacru_upload_firmware-into-cxa.patch
 	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
+	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
