usb: early: xhci-dbc: Fix early_ioremap leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33206,6 +33206,7 @@
 	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
 	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
 	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
+	patches.suse/usb-early-xhci-dbc-Fix-early_ioremap-leak.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
