usb: typec: ucsi: Update power_supply on power role change (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33209,6 +33209,7 @@
 	patches.suse/usb-early-xhci-dbc-Fix-early_ioremap-leak.patch
 	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
 	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
+	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
