--- a/series.conf
+++ b/series.conf
@@ -33203,6 +33203,7 @@
 	patches.suse/staging-axis-fifo-remove-sysfs-interface.patch
 	patches.suse/vt-keyboard-Don-t-process-Unicode-characters-in-K_OF.patch
 	patches.suse/vt-defkeymap-Map-keycodes-above-127-to-K_HOLE.patch
+	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
