staging: fbtft: fix potential memory leak in fbtft_framebuffer_alloc() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33198,6 +33198,7 @@
 	patches.suse/iio-imu-bno055-fix-OOB-access-of-hw_xlate-array.patch
 	patches.suse/iio-adc-ad_sigma_delta-change-to-buffer-predisable.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra.patch
+	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra-505bffe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
