--- a/series.conf
+++ b/series.conf
@@ -33205,6 +33205,7 @@
 	patches.suse/vt-defkeymap-Map-keycodes-above-127-to-K_HOLE.patch
 	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
 	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
+	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
