ASoC: ops: dynamically allocate struct snd_ctl_elem_value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33188,6 +33188,7 @@
 	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
 	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
 	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
+	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
