platform/chrome: cros_ec: Unregister notifier in cros_ec_unregister() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33190,6 +33190,7 @@
 	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
 	patches.suse/gpio-virtio-Fix-config-space-reading.patch
+	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
