--- a/series.conf
+++ b/series.conf
@@ -33201,6 +33201,7 @@
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra-505bffe.patch
 	patches.suse/staging-nvec-Fix-incorrect-null-termination-of-batte.patch
 	patches.suse/staging-axis-fifo-remove-sysfs-interface.patch
+	patches.suse/vt-keyboard-Don-t-process-Unicode-characters-in-K_OF.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
