ASoC: soc-dai: tidyup return value of snd_soc_xlate_tdm_slot_mask() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33187,6 +33187,7 @@
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
 	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
 	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
+	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
