gpio: virtio: Fix config space reading (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33189,6 +33189,7 @@
 	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
 	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
+	patches.suse/gpio-virtio-Fix-config-space-reading.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
