vmci: Prevent the dispatching of uninitialized payloads (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33192,6 +33192,7 @@
 	patches.suse/gpio-virtio-Fix-config-space-reading.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
 	patches.suse/samples-mei-Fix-building-on-musl-libc.patch
+	patches.suse/vmci-Prevent-the-dispatching-of-uninitialized-payloa.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
