PM / devfreq: Check governor before using governor->name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33182,6 +33182,7 @@
 	patches.suse/hfsplus-make-splice-write-available-again.patch
 	patches.suse/hfs-make-splice-write-available-again.patch
 	patches.suse/hfsplus-remove-mutex_lock-check-in-hfsplus_free_extents.patch
+	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
