--- a/series.conf
+++ b/series.conf
@@ -33210,6 +33210,7 @@
 	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
 	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
 	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
+	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
