misc: rtsx: usb: Ensure mmc child device is active when card is present (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33193,6 +33193,7 @@
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
 	patches.suse/samples-mei-Fix-building-on-musl-libc.patch
 	patches.suse/vmci-Prevent-the-dispatching-of-uninitialized-payloa.patch
+	patches.suse/misc-rtsx-usb-Ensure-mmc-child-device-is-active-when.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
