--- a/series.conf
+++ b/series.conf
@@ -33216,6 +33216,7 @@
 	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
 	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
+	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
