usb: dwc3: meson-g12a: fix device leaks at unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33212,6 +33212,7 @@
 	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
 	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
 	patches.suse/usb-atm-cxacru-Merge-cxacru_upload_firmware-into-cxa.patch
+	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
