usb: atm: cxacru: Merge cxacru_upload_firmware() into cxacru_heavy_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33211,6 +33211,7 @@
 	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
 	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
 	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
+	patches.suse/usb-atm-cxacru-Merge-cxacru_upload_firmware-into-cxa.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
