Documentation: usb: gadget: Wrap remaining usage snippets in literal code block (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33204,6 +33204,7 @@
 	patches.suse/vt-keyboard-Don-t-process-Unicode-characters-in-K_OF.patch
 	patches.suse/vt-defkeymap-Map-keycodes-above-127-to-K_HOLE.patch
 	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
+	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
