iio: adc: ad_sigma_delta: change to buffer predisable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33196,6 +33196,7 @@
 	patches.suse/misc-rtsx-usb-Ensure-mmc-child-device-is-active-when.patch
 	patches.suse/bus-mhi-host-Detect-events-pointing-to-unexpected-TR.patch
 	patches.suse/iio-imu-bno055-fix-OOB-access-of-hw_xlate-array.patch
+	patches.suse/iio-adc-ad_sigma_delta-change-to-buffer-predisable.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
