--- a/series.conf
+++ b/series.conf
@@ -33183,6 +33183,7 @@
 	patches.suse/hfs-make-splice-write-available-again.patch
 	patches.suse/hfsplus-remove-mutex_lock-check-in-hfsplus_free_extents.patch
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
+	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
