staging: axis-fifo: remove sysfs interface (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33200,6 +33200,7 @@
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra-505bffe.patch
 	patches.suse/staging-nvec-Fix-incorrect-null-termination-of-batte.patch
+	patches.suse/staging-axis-fifo-remove-sysfs-interface.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
