usb: musb: omap2430: fix device leak at unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33214,6 +33214,7 @@
 	patches.suse/usb-atm-cxacru-Merge-cxacru_upload_firmware-into-cxa.patch
 	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
 	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
+	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
