--- a/series.conf
+++ b/series.conf
@@ -33218,6 +33218,7 @@
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
+	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
