--- a/series.conf
+++ b/series.conf
@@ -33202,6 +33202,7 @@
 	patches.suse/staging-nvec-Fix-incorrect-null-termination-of-batte.patch
 	patches.suse/staging-axis-fifo-remove-sysfs-interface.patch
 	patches.suse/vt-keyboard-Don-t-process-Unicode-characters-in-K_OF.patch
+	patches.suse/vt-defkeymap-Map-keycodes-above-127-to-K_HOLE.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
