samples: mei: Fix building on musl libc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33191,6 +33191,7 @@
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
 	patches.suse/gpio-virtio-Fix-config-space-reading.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
+	patches.suse/samples-mei-Fix-building-on-musl-libc.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
