usb: gadget : fix use-after-free in composite_dev_cleanup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33208,6 +33208,7 @@
 	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
 	patches.suse/usb-early-xhci-dbc-Fix-early_ioremap-leak.patch
 	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
+	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
