--- a/series.conf
+++ b/series.conf
@@ -33215,6 +33215,7 @@
 	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
 	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
 	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
+	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
