soc: qcom: fix endianness for QMI header (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33217,6 +33217,7 @@
 	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
+	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
