--- a/series.conf
+++ b/series.conf
@@ -33197,6 +33197,7 @@
 	patches.suse/bus-mhi-host-Detect-events-pointing-to-unexpected-TR.patch
 	patches.suse/iio-imu-bno055-fix-OOB-access-of-hw_xlate-array.patch
 	patches.suse/iio-adc-ad_sigma_delta-change-to-buffer-predisable.patch
+	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
