Documentation: ACPI: Fix parent device references (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33186,6 +33186,7 @@
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
 	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
+	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
