--- a/series.conf
+++ b/series.conf
@@ -33219,6 +33219,7 @@
 	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
+	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
