--- a/series.conf
+++ b/series.conf
@@ -33207,6 +33207,7 @@
 	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
 	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
 	patches.suse/usb-early-xhci-dbc-Fix-early_ioremap-leak.patch
+	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
