--- a/series.conf
+++ b/series.conf
@@ -54187,6 +54187,7 @@
 	patches.suse/mei-vsc-Drop-unused-vsc_tp_request_irq-and-vsc_tp_fr.patch
 	patches.suse/mei-vsc-Don-t-re-init-VSC-from-mei_vsc_hw_reset-on-s.patch
 	patches.suse/mei-vsc-Destroy-mutex-after-freeing-the-IRQ.patch
+	patches.suse/mei-vsc-Event-notifier-fixes.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
