--- a/series.conf
+++ b/series.conf
@@ -54184,6 +54184,7 @@
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 	patches.suse/ASoC-mediatek-use-reserved-memory-or-enable-buffer-p.patch
 	patches.suse/pwm-rockchip-Round-period-duty-down-on-apply-up-on-g.patch
+	patches.suse/mei-vsc-Drop-unused-vsc_tp_request_irq-and-vsc_tp_fr.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
