ASoC: mediatek: use reserved memory or enable buffer pre-allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54182,6 +54182,7 @@
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
+	patches.suse/ASoC-mediatek-use-reserved-memory-or-enable-buffer-p.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
