--- a/series.conf
+++ b/series.conf
@@ -54190,6 +54190,7 @@
 	patches.suse/mei-vsc-Event-notifier-fixes.patch
 	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
 	patches.suse/mei-vsc-Run-event-callback-from-a-workqueue.patch
+	patches.suse/mei-vsc-Fix-BUG-Invalid-wait-context-lockdep-error.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
