pwm: rockchip: Round period/duty down on apply, up on get (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54183,6 +54183,7 @@
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 	patches.suse/ASoC-mediatek-use-reserved-memory-or-enable-buffer-p.patch
+	patches.suse/pwm-rockchip-Round-period-duty-down-on-apply-up-on-g.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
