--- a/series.conf
+++ b/series.conf
@@ -54188,6 +54188,7 @@
 	patches.suse/mei-vsc-Don-t-re-init-VSC-from-mei_vsc_hw_reset-on-s.patch
 	patches.suse/mei-vsc-Destroy-mutex-after-freeing-the-IRQ.patch
 	patches.suse/mei-vsc-Event-notifier-fixes.patch
+	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
