mei: vsc: Don't re-init VSC from mei_vsc_hw_reset() on stop (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54185,6 +54185,7 @@
 	patches.suse/ASoC-mediatek-use-reserved-memory-or-enable-buffer-p.patch
 	patches.suse/pwm-rockchip-Round-period-duty-down-on-apply-up-on-g.patch
 	patches.suse/mei-vsc-Drop-unused-vsc_tp_request_irq-and-vsc_tp_fr.patch
+	patches.suse/mei-vsc-Don-t-re-init-VSC-from-mei_vsc_hw_reset-on-s.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
