--- a/series.conf
+++ b/series.conf
@@ -54189,6 +54189,7 @@
 	patches.suse/mei-vsc-Destroy-mutex-after-freeing-the-IRQ.patch
 	patches.suse/mei-vsc-Event-notifier-fixes.patch
 	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
+	patches.suse/mei-vsc-Run-event-callback-from-a-workqueue.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
