ASoC: soc-dai: tidyup return value of snd_soc_xlate_tdm_slot_mask() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10343,6 +10343,7 @@
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
 	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
 	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
+	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
