--- a/series.conf
+++ b/series.conf
@@ -10382,6 +10382,7 @@
 	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
 	patches.suse/usb-typec-fusb302-cache-PD-RX-state.patch
 	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
+	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
