--- a/series.conf
+++ b/series.conf
@@ -10378,6 +10378,7 @@
 	patches.suse/usb-typec-ucsi-yoga-c630-fix-error-and-remove-paths.patch
 	patches.suse/USB-gadget-f_hid-Fix-memory-leak-in-hidg_bind-error-.patch
 	patches.suse/usb-early-xhci-dbc-Fix-early_ioremap-leak.patch
+	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
