--- a/series.conf
+++ b/series.conf
@@ -10347,6 +10347,7 @@
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
 	patches.suse/gpio-virtio-Fix-config-space-reading.patch
 	patches.suse/spi-stm32-Check-for-cfg-availability-in-stm32_spi_pr.patch
+	patches.suse/pwm-rockchip-Round-period-duty-down-on-apply-up-on-g.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
