--- a/series.conf
+++ b/series.conf
@@ -10349,6 +10349,7 @@
 	patches.suse/spi-stm32-Check-for-cfg-availability-in-stm32_spi_pr.patch
 	patches.suse/pwm-rockchip-Round-period-duty-down-on-apply-up-on-g.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
+	patches.suse/mei-vsc-Drop-unused-vsc_tp_request_irq-and-vsc_tp_fr.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
