--- a/series.conf
+++ b/series.conf
@@ -10380,6 +10380,7 @@
 	patches.suse/usb-early-xhci-dbc-Fix-early_ioremap-leak.patch
 	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
 	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
+	patches.suse/usb-typec-fusb302-cache-PD-RX-state.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
