mei: vsc: Run event callback from a workqueue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10354,6 +10354,7 @@
 	patches.suse/mei-vsc-Destroy-mutex-after-freeing-the-IRQ.patch
 	patches.suse/mei-vsc-Event-notifier-fixes.patch
 	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
+	patches.suse/mei-vsc-Run-event-callback-from-a-workqueue.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
