--- a/series.conf
+++ b/series.conf
@@ -10362,6 +10362,7 @@
 	patches.suse/bus-mhi-host-pci_generic-Fix-the-modem-name-of-Foxco.patch
 	patches.suse/bus-mhi-host-Detect-events-pointing-to-unexpected-TR.patch
 	patches.suse/iio-imu-bno055-fix-OOB-access-of-hw_xlate-array.patch
+	patches.suse/iio-adc-ad_sigma_delta-change-to-buffer-predisable.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
