--- a/series.conf
+++ b/series.conf
@@ -10355,6 +10355,7 @@
 	patches.suse/mei-vsc-Event-notifier-fixes.patch
 	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
 	patches.suse/mei-vsc-Run-event-callback-from-a-workqueue.patch
+	patches.suse/mei-vsc-Fix-BUG-Invalid-wait-context-lockdep-error.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
