memory: mtk-smi: Add ostd setting for mt8186 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10390,6 +10390,7 @@
 	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
 	patches.suse/firmware-arm_scmi-Fix-up-turbo-frequencies-selection.patch
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
+	patches.suse/memory-mtk-smi-Add-ostd-setting-for-mt8186.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
