--- a/series.conf
+++ b/series.conf
@@ -10342,6 +10342,7 @@
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
 	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
+	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
