--- a/series.conf
+++ b/series.conf
@@ -10387,6 +10387,7 @@
 	patches.suse/usb-dwc3-imx8mp-fix-device-leak-at-unbind.patch
 	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
 	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
+	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
