usb: dwc3: meson-g12a: fix device leaks at unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10385,6 +10385,7 @@
 	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
 	patches.suse/usb-atm-cxacru-Merge-cxacru_upload_firmware-into-cxa.patch
 	patches.suse/usb-dwc3-imx8mp-fix-device-leak-at-unbind.patch
+	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
