--- a/series.conf
+++ b/series.conf
@@ -10336,6 +10336,7 @@
 	patches.suse/xfs-remove-unused-trace-event-xfs_reflink_cow_enospc.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
+	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
