--- a/series.conf
+++ b/series.conf
@@ -10392,6 +10392,7 @@
 	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/memory-mtk-smi-Add-ostd-setting-for-mt8186.patch
 	patches.suse/soc-qcom-mdt_loader-Ensure-we-don-t-read-past-the-EL.patch
+	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
