--- a/series.conf
+++ b/series.conf
@@ -10353,6 +10353,7 @@
 	patches.suse/mei-vsc-Don-t-re-init-VSC-from-mei_vsc_hw_reset-on-s.patch
 	patches.suse/mei-vsc-Destroy-mutex-after-freeing-the-IRQ.patch
 	patches.suse/mei-vsc-Event-notifier-fixes.patch
+	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
