firmware: arm_scmi: Fix up turbo frequencies selection (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10388,6 +10388,7 @@
 	patches.suse/usb-dwc3-meson-g12a-fix-device-leaks-at-unbind.patch
 	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
 	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
+	patches.suse/firmware-arm_scmi-Fix-up-turbo-frequencies-selection.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
