bus: mhi: host: Detect events pointing to unexpected TREs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10360,6 +10360,7 @@
 	patches.suse/vmci-Prevent-the-dispatching-of-uninitialized-payloa.patch
 	patches.suse/misc-rtsx-usb-Ensure-mmc-child-device-is-active-when.patch
 	patches.suse/bus-mhi-host-pci_generic-Fix-the-modem-name-of-Foxco.patch
+	patches.suse/bus-mhi-host-Detect-events-pointing-to-unexpected-TR.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
