--- a/series.conf
+++ b/series.conf
@@ -10373,6 +10373,7 @@
 	patches.suse/vt-keyboard-Don-t-process-Unicode-characters-in-K_OF.patch
 	patches.suse/vt-defkeymap-Map-keycodes-above-127-to-K_HOLE.patch
 	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
+	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
