staging: fbtft: fix potential memory leak in fbtft_framebuffer_alloc() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10367,6 +10367,7 @@
 	patches.suse/interconnect-qcom-sc8280xp-specify-num_links-for-qnm.patch
 	patches.suse/interconnect-qcom-sc8180x-specify-num_nodes.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra.patch
+	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra-505bffe.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
