--- a/series.conf
+++ b/series.conf
@@ -10368,6 +10368,7 @@
 	patches.suse/interconnect-qcom-sc8180x-specify-num_nodes.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra.patch
 	patches.suse/staging-fbtft-fix-potential-memory-leak-in-fbtft_fra-505bffe.patch
+	patches.suse/staging-nvec-Fix-incorrect-null-termination-of-batte.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
