usb: typec: ucsi: Update power_supply on power role change (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10381,6 +10381,7 @@
 	patches.suse/cdc-acm-fix-race-between-initial-clearing-halt-and-o.patch
 	patches.suse/usb-gadget-fix-use-after-free-in-composite_dev_clean.patch
 	patches.suse/usb-typec-fusb302-cache-PD-RX-state.patch
+	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
