usb: atm: cxacru: Merge cxacru_upload_firmware() into cxacru_heavy_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10383,6 +10383,7 @@
 	patches.suse/usb-typec-fusb302-cache-PD-RX-state.patch
 	patches.suse/usb-typec-ucsi-Update-power_supply-on-power-role-cha.patch
 	patches.suse/thunderbolt-Fix-copy-paste-error-in-match_service_id.patch
+	patches.suse/usb-atm-cxacru-Merge-cxacru_upload_firmware-into-cxa.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
