spi: stm32: Check for cfg availability in stm32_spi_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10346,6 +10346,7 @@
 	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
 	patches.suse/gpio-virtio-Fix-config-space-reading.patch
+	patches.suse/spi-stm32-Check-for-cfg-availability-in-stm32_spi_pr.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
