ACPI: processor: perflib: Fix initial _PPC limit application (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10340,6 +10340,7 @@
 	patches.suse/PM-devfreq-Fix-a-index-typo-in-trans_stat.patch
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
+	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
