--- a/series.conf
+++ b/series.conf
@@ -10389,6 +10389,7 @@
 	patches.suse/usb-gadget-udc-renesas_usb3-fix-device-leak-at-unbin.patch
 	patches.suse/usb-musb-omap2430-fix-device-leak-at-unbind.patch
 	patches.suse/firmware-arm_scmi-Fix-up-turbo-frequencies-selection.patch
+	patches.suse/soc-tegra-cbb-Clear-ERR_FORCE-register-with-ERR_STAT.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
