--- a/series.conf
+++ b/series.conf
@@ -10352,6 +10352,7 @@
 	patches.suse/mei-vsc-Drop-unused-vsc_tp_request_irq-and-vsc_tp_fr.patch
 	patches.suse/mei-vsc-Don-t-re-init-VSC-from-mei_vsc_hw_reset-on-s.patch
 	patches.suse/mei-vsc-Destroy-mutex-after-freeing-the-IRQ.patch
+	patches.suse/mei-vsc-Event-notifier-fixes.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
