--- a/series.conf
+++ b/series.conf
@@ -10345,6 +10345,7 @@
 	patches.suse/Documentation-ACPI-Fix-parent-device-references.patch
 	patches.suse/ASoC-soc-dai-tidyup-return-value-of-snd_soc_xlate_td.patch
 	patches.suse/ASoC-ops-dynamically-allocate-struct-snd_ctl_elem_va.patch
+	patches.suse/gpio-virtio-Fix-config-space-reading.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
