--- a/series.conf
+++ b/series.conf
@@ -10374,6 +10374,7 @@
 	patches.suse/vt-defkeymap-Map-keycodes-above-127-to-K_HOLE.patch
 	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
 	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
+	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
