Docs/ABI: Fix sysfs-kernel-address_bits path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10395,6 +10395,7 @@
 	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
+	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
