misc: rtsx: usb: Ensure mmc child device is active when card is present (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10358,6 +10358,7 @@
 	patches.suse/mei-vsc-Fix-BUG-Invalid-wait-context-lockdep-error.patch
 	patches.suse/samples-mei-Fix-building-on-musl-libc.patch
 	patches.suse/vmci-Prevent-the-dispatching-of-uninitialized-payloa.patch
+	patches.suse/misc-rtsx-usb-Ensure-mmc-child-device-is-active-when.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
