interconnect: qcom: sc8180x: specify num_nodes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10365,6 +10365,7 @@
 	patches.suse/iio-adc-ad_sigma_delta-change-to-buffer-predisable.patch
 	patches.suse/comedi-fix-race-between-polling-and-detaching.patch
 	patches.suse/interconnect-qcom-sc8280xp-specify-num_links-for-qnm.patch
+	patches.suse/interconnect-qcom-sc8180x-specify-num_nodes.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
