ACPI: LPSS: Remove AudioDSP related ID (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10341,6 +10341,7 @@
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
 	patches.suse/powercap-dtpm_cpu-Fix-NULL-pointer-dereference-in-ge.patch
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
+	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
