samples: mei: Fix building on musl libc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10356,6 +10356,7 @@
 	patches.suse/mei-vsc-Unset-the-event-callback-on-remove-and-probe.patch
 	patches.suse/mei-vsc-Run-event-callback-from-a-workqueue.patch
 	patches.suse/mei-vsc-Fix-BUG-Invalid-wait-context-lockdep-error.patch
+	patches.suse/samples-mei-Fix-building-on-musl-libc.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
