--- a/series.conf
+++ b/series.conf
@@ -10338,6 +10338,7 @@
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 	patches.suse/PM-devfreq-Fix-a-index-typo-in-trans_stat.patch
+	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
