soc: qcom: mdt_loader: Fix error return values in mdt_header_valid() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10394,6 +10394,7 @@
 	patches.suse/soc-qcom-mdt_loader-Ensure-we-don-t-read-past-the-EL.patch
 	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
+	patches.suse/soc-qcom-mdt_loader-Fix-error-return-values-in-mdt_h.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
