--- a/supported.conf
+++ b/supported.conf
@@ -3814,6 +3814,9 @@
 -				drivers/net/wireless/mediatek/mt76/mt7921/mt7921e
 -!optional			drivers/net/wireless/mediatek/mt76/mt7921/mt7921s
 -!optional			drivers/net/wireless/mediatek/mt76/mt7921/mt7921u
+-!optional			drivers/net/wireless/mediatek/mt76/mt7925/mt7925-common
+-!optional			drivers/net/wireless/mediatek/mt76/mt7925/mt7925e
+-!optional			drivers/net/wireless/mediatek/mt76/mt7925/mt7925u
 -				drivers/net/wireless/mediatek/mt76/mt792x-lib
 -				drivers/net/wireless/mediatek/mt76/mt792x-usb
 -!optional			drivers/net/wireless/mediatek/mt76/mt7996/mt7996e		# SP6-NEED-REVIEW
