--- a/series.conf
+++ b/series.conf
@@ -10410,6 +10410,7 @@
 	patches.suse/x86-bugs-Allow-ITS-stuffing-in-eIBRS-retpoline-mode-also.patch
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 	patches.suse/s390-mm-Remove-possible-false-positive-warning-in-pte_free.patch
+	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
