--- a/series.conf
+++ b/series.conf
@@ -33223,6 +33223,7 @@
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
+	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
