wifi: mac80211: Check 802.11 encaps offloading in ieee80211_tx_h_select_key() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33231,6 +33231,7 @@
 	patches.suse/wifi-plfxlc-Fix-error-handling-in-usb-driver-probe.patch
 	patches.suse/wifi-mac80211-Do-not-schedule-stopped-TXQs.patch
 	patches.suse/wifi-mac80211-Don-t-call-fq_flow_idx-for-management-.patch
+	patches.suse/wifi-mac80211-Check-802.11-encaps-offloading-in-ieee.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
