wifi: ath12k: fix endianness handling while accessing wmi service bit (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33243,6 +33243,7 @@
 	patches.suse/wifi-ath12k-fix-source-ring-buffer-corruption.patch
 	patches.suse/wifi-ath12k-fix-dest-ring-buffer-corruption-when-rin.patch
 	patches.suse/wifi-ath11k-fix-sleeping-in-atomic-in-ath11k_mac_op_.patch
+	patches.suse/wifi-ath12k-fix-endianness-handling-while-accessing-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
