--- a/series.conf
+++ b/series.conf
@@ -33252,6 +33252,7 @@
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
+	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
