--- a/series.conf
+++ b/series.conf
@@ -33234,6 +33234,7 @@
 	patches.suse/wifi-mac80211-Check-802.11-encaps-offloading-in-ieee.patch
 	patches.suse/Reapply-wifi-mac80211-Update-skb-s-control-block-key.patch
 	patches.suse/wifi-brcmfmac-fix-P2P-discovery-failure-in-P2P-peer-.patch
+	patches.suse/wifi-ath11k-clear-initialized-flag-for-deinit-ed-srn.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
