--- a/series.conf
+++ b/series.conf
@@ -33226,6 +33226,7 @@
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
+	patches.suse/wifi-brcmsmac-Remove-const-from-tbl_ptr-parameter-in.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
