--- a/series.conf
+++ b/series.conf
@@ -33238,6 +33238,7 @@
 	patches.suse/wifi-ath11k-fix-suspend-use-after-free-after-probe-f.patch
 	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption.patch
 	patches.suse/wifi-ath11k-fix-source-ring-buffer-corruption.patch
+	patches.suse/wifi-ath11k-fix-dest-ring-buffer-corruption-when-rin.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
