--- a/series.conf
+++ b/series.conf
@@ -33249,6 +33249,7 @@
 	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
 	patches.suse/net-usbnet-Avoid-potential-RCU-stall-on-LINK_CHANGE-.patch
 	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
+	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
