--- a/series.conf
+++ b/series.conf
@@ -33255,6 +33255,7 @@
 	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
 	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
+	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
