wifi: mac80211: Do not schedule stopped TXQs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33229,6 +33229,7 @@
 	patches.suse/wifi-brcmsmac-Remove-const-from-tbl_ptr-parameter-in.patch
 	patches.suse/wifi-mac80211-reject-TDLS-operations-when-station-is.patch
 	patches.suse/wifi-plfxlc-Fix-error-handling-in-usb-driver-probe.patch
+	patches.suse/wifi-mac80211-Do-not-schedule-stopped-TXQs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
