wifi: plfxlc: Fix error handling in usb driver probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33228,6 +33228,7 @@
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-brcmsmac-Remove-const-from-tbl_ptr-parameter-in.patch
 	patches.suse/wifi-mac80211-reject-TDLS-operations-when-station-is.patch
+	patches.suse/wifi-plfxlc-Fix-error-handling-in-usb-driver-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
