fbcon: Fix outdated registered_fb reference in comment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33254,6 +33254,7 @@
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
 	patches.suse/drm-vmwgfx-Fix-Host-Backed-userspace-on-Guest-Backed.patch
 	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
+	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
